--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: required
 
 language: python
+python:
   - "3.6"
 
 services:
@@ -10,8 +11,7 @@ env:
   global:
     - BUILD_ON_TRAVIS=true
   matrix:
-    - DJANGO_VERSION=1.11.0 DB=postgresql
-    - DJANGO_VERSION=1.11.1 DB=postgresql
+    - DJANGO_VERSION=1.11.5 DB=postgresql
 
 install:
   - pip install -r requirements.txt
