--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ addons:
 env:
   global:
     - BUILD_ON_TRAVIS=true
+    - IS_HEROKU_TEST=1
   matrix:
     - DJANGO_VERSION=1.11.5 DB=postgresql
 
