--- a/.travis.yml
+++ b/.travis.yml
@@ -29,18 +29,18 @@ script:
   - python manage.py migrate
   - python manage.py test
 
-deploy:
-  provider: heroku
-  buildpack: python
-  api_key:
-    secure: 8c6f49c0-f5fc-4271-b731-96d679998743
-  strategy: git
-  app: checash
-  on:
-    repo: heroku/checash
-    branch: master
-  run:
-    - "python checash/manage.py makemigrations --noinput"
-    - "python checash/manage.py migrate"
-    - "python checash/manage.py collectstatic"
-    - restart
+#deploy:
+#  provider: heroku
+#  buildpack: python
+#  api_key:
+#    secure: 8c6f49c0-f5fc-4271-b731-96d679998743
+#  strategy: git
+#  app: checash
+#  on:
+#    repo: heroku/checash
+#    branch: master
+#  run:
+#    - "python checash/manage.py makemigrations --noinput"
+#    - "python checash/manage.py migrate"
+#    - "python checash/manage.py collectstatic"
+#    - restart
