--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
 install:
   - pip install -r requirements.txt
   - pip install -q Django==$DJANGO_VERSION
+  - pip install codecov
 
 before_script:
   - psql -c 'create database travis_ci_db;' -U postgres
@@ -27,7 +28,11 @@ before_script:
 
 script:
   - python manage.py migrate
-  - python manage.py test
+  - coverage run tests.py
+#  - python manage.py test
+
+after_success:
+  - codecov
 
 #deploy:
 #  provider: heroku
